--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,54 @@
-// Countdown Timer
-function updateCountdown() {
-  const now = new Date();
-  const today2PM = new Date(now);
-  today2PM.setHours(14, 0, 0, 0); // Set to 2 PM
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hare Krishna Chanting</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>Welcome to Daily Hare Krishna Chanting</h1>
+    <p>Join us every day at 2 PM for a spiritual experience!</p>
+  </header>
 
-  if (now > today2PM) {
-    // If it's past 2 PM, set the timer for tomorrow
-    today2PM.setDate(today2PM.getDate() + 1);
-  }
+  <main>
+    <section id="countdown-section">
+      <h2>Next Chanting Session Starts In:</h2>
+      <div id="countdown-timer"></div>
+    </section>
 
-  const timeDifference = today2PM - now;
-  const hours = Math.floor(timeDifference / (1000 * 60 * 60));
-  const minutes = Math.floor((timeDifference % (1000 * 60 * 60)) / (1000 * 60));
-  const seconds = Math.floor((timeDifference % (1000 * 60)) / 1000);
+    <section id="chanting-section">
+      <h2>Chant the Hare Krishna Mantra</h2>
+      <p>Repeat after us:</p>
+      <blockquote>
+        Hare Krishna, Hare Krishna,<br>
+        Krishna Krishna, Hare Hare,<br>
+        Hare Rama, Hare Rama,<br>
+        Rama Rama, Hare Hare.
+      </blockquote>
+      <button id="chant-button">Play Audio</button>
+      <audio id="chant-audio" src="hare-krishna-mantra.mp3"></audio>
+    </section>
 
-  document.getElementById('countdown-timer').innerHTML = `
-    ${hours}h ${minutes}m ${seconds}s
-  `;
-}
+    <section id="contact-section">
+      <h2>Contact Us</h2>
+      <form id="contact-form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </section>
+  </main>
 
-setInterval(updateCountdown, 1000);
-updateCountdown();
+  <footer>
+    <p>&copy; 2023 Hare Krishna Chanting. All rights reserved.</p>
+  </footer>
 
-// Play Audio on Button Click
-document.getElementById('chant-button').addEventListener('click', () => {
-  const audio = document.getElementById('chant-audio');
-  audio.play();
-});
+  <script src="script.js"></script>
+</body>
+</html>
